# lolzup

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260715_01_initial_schema.py  20260720_02_add_scheduler_due_index.py
scripts/: install.sh  run.sh
src/lolzup/: __init__.py  config.py  logging.py  main.py
src/lolzup/access/: __init__.py  service.py
src/lolzup/bot/: __init__.py  admin_views.py  keyboards.py  menu.py  settings_views.py  states.py  timeout.py  topic_views.py
src/lolzup/db/: __init__.py  migrations.py  models.py  repositories.py  session.py
src/lolzup/forum/: __init__.py  client.py  types.py
src/lolzup/scheduler/: __init__.py  repository.py  service.py
src/lolzup/security/: __init__.py  crypto.py  policy.py  runtime.py  setup.py
src/lolzup/topics/: __init__.py  parser.py  schedule.py  service.py
tests/integration/db/: test_repositories.py  test_schema.py
tests/integration/scheduler/: test_scheduler_service.py
tests/integration/security/: test_encryption_migration.py  test_setup.py
tests/unit/: test_config.py  test_logging.py  test_main.py
tests/unit/access/: test_service.py
tests/unit/bot/: test_admins_router.py  test_cancel.py  test_menu.py  test_settings_router.py  test_setup_router.py  test_timeout.py  test_topics_router.py
tests/unit/db/: test_codec.py
tests/unit/forum/: test_client.py
tests/unit/security/: test_crypto.py  test_policy.py  test_runtime.py
tests/unit/topics/: test_parser.py  test_schedule.py  test_topic_service.py
(+7 files in other folders)
