[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lolzup"
version = "0.1.0"
description = "Telegram bot for scheduled Lolzteam topic bumps"
requires-python = ">=3.12,<3.13"
dependencies = [
	"aiogram==3.29.1",
	"SQLAlchemy==2.0.51",
	"asyncpg==0.31.0",
	"alembic==1.18.5",
	"httpx==0.28.1",
	"cryptography==49.0.0",
	"argon2-cffi==25.1.0",
	"pydantic-settings==2.14.2",
]

[project.optional-dependencies]
dev = [
	"pytest==9.1.1",
	"pytest-timeout==2.3.1",
	"ruff==0.15.21",
	"mypy==2.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
	"unit: unit tests",
	"integration: integration tests",
]
